--- a/styleport.css
+++ b/styleport.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url("PortafolioHector.github.io/IMAGES/universo.jpg");
+    background-image: url(…/…//IMAGES/universo.jpg);
     height: 100vh;    
 
 }
