--- a/styleport.css
+++ b/styleport.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url(/PortafolioHector.github.io/IMAGES/universo.jpg);
+    background-image: url(https://imgur.com/DsEm1Td);
     height: 100vh;    
 
 }
