--- a/styleport.css
+++ b/styleport.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url(https://imgur.com/DsEm1Td);
+    background-image: url("https://i.imgur.com/DsEm1Td.jpg");
     height: 100vh;    
 
 }
