--- a/styleport.css
+++ b/styleport.css
@@ -1569,3 +1569,55 @@ input::placeholder, textarea::placeholder{
     grid-auto-columns: 100%;
   }
 }
+
+a#scroll-btn {
+  position: absolute;
+  height: 3em;
+  width: 3.25em;
+  border: 0.3em solid #ffffff;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 2.25em;
+  border-radius: 3em;
+}
+a#scroll-btn:before {
+  content: "";
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  height: 10px;
+  width: 10px;
+  transform: translate(-50%, -100%) rotate(45deg);
+  border: 2px solid rgb(255, 255, 255);
+  border-top: transparent;
+  border-left: transparent;
+  animation: scroll-down 1s ease-in-out infinite;
+}
+.scroll-down::before {
+  top: 30%;
+  animation-delay: 0.3s;
+  /* animation: scroll-down 1s ease-in-out infinite; */
+}
+
+@keyframes scroll-down {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    top: 90%;
+    opacity: 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  a#scroll-btn {
+    font-size: 12px;
+  }
+}
